# 42run

./: 42run  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
Classes/: GameObject.class.cpp  GameObject.class.hpp  Transform.class.cpp  Transform.class.hpp
Classes/GamePlay/: Player.class.cpp  Player.class.hpp  SceneManager.class.cpp  SceneManager.class.hpp
Classes/Math/: Mat2.class.cpp  Mat2.class.hpp  Mat3.class.cpp  Mat3.class.hpp  Mat4.class.cpp  Mat4.class.hpp  Vec2.class.cpp  Vec2.class.hpp  Vec3.class.cpp  Vec3.class.hpp  Vec4.class.cpp  Vec4.class.hpp
Classes/Render/: Camera.class.cpp  Camera.class.hpp  Mesh.class.cpp  Mesh.class.hpp  ObjParser.class.cpp  ObjParser.class.hpp  RenderManager.class.cpp  RenderManager.class.hpp  Vertex.class.cpp  Vertex.class.hpp
Objects/: couloir.mtl  e2.mtl  player.mtl  room_cluster.mtl  test.mtl  tm.mtl
Shaders/: general.frag  general.vert  uiShader.frag  uiShader.vert
include/: 42run.hpp  gamePlay.hpp  joMath.hpp  math.hpp  nuklear.h  nuklear_sdl_gl3.h  render.hpp
src/: main.cpp
